--- a/style.css
+++ b/style.css
@@ -1,31 +1,42 @@
-body {
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  min-width: 100vw;
+  max-height: 100vh;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 #outer-container {
+  margin: auto;
   width: 100%;
   max-width: 600px;
-  margin: 0px auto;
-  border: 1px solid #f1f1f1;
+  border: 1px solid #d1d1d1;
   border-top: none;
-  position: relative;
+  border-bottom: none;
 }
 
 #header-container {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  position: sticky;
-  top: 0;
-  background-color: white;
+  justify-content: flex-start;
+  padding: 10px 15px;
   z-index: 2;
+}
+
+.name {
+  font-size: 20px;
+  font-weight: 700;
 }
 
 #tweet-count {
   margin: 0px;
   margin-bottom: 5px;
-  color: rgb(91, 112, 131);
+  color: rgb(90, 100, 110);
   font-size: 13px;
   font-weight: 400;
 }
