--- a/style.css
+++ b/style.css
@@ -26,7 +26,23 @@ html {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 10px 15px;
+  padding: 5px 0;
+}
+
+.user-content {
+  padding: 0 20px;
+}
+
+.arrow {
+  padding: 0 20px;
+}
+
+.arrow img {
+  height: 12px;
+}
+
+.arrow:hover {
+  cursor: pointer;
 }
 
 .name {
@@ -109,6 +125,11 @@ html {
 
 .tab:hover {
   cursor: pointer;
+  background-color: rgba(29, 160, 242, 0.137);
+  border-bottom: 2px solid rgb(29, 161, 242);
+}
+
+.active {
   background-color: rgba(29, 160, 242, 0.137);
   border-bottom: 2px solid rgb(29, 161, 242);
 }
