--- a/style.css
+++ b/style.css
@@ -61,8 +61,13 @@ html {
   height: 275px;
 }
 
+.avatar-follow {
+  display: flex;
+  justify-content: space-between;
+}
+
 .avatar-img {
-  padding: 0 15px;
+  padding-left: 15px;
   position: relative;
   top: -75px;
 }
@@ -74,6 +79,19 @@ html {
   border: 4px solid white;
 }
 
+button {
+  height: 40px;
+  width: 110px;
+  border-radius: 40px;
+  color: white;
+  background-color: rgb(32, 170, 250);;
+  border: none;
+  font-weight: 700;
+  font-size: 15px;
+  margin-top: 10px;
+  margin-right: 15px;
+}
+
 /* ---- profile content ---- */
 
 #profile-container {
@@ -81,7 +99,7 @@ html {
 }
 
 .light-gray {
-  color: #6f6f7f;
+  color: #5f6f7f;
   font-weight: 400;
   font-size: 14px;
   letter-spacing: .02rem;
@@ -116,7 +134,6 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(29, 161, 242);
   border-bottom: 2px solid white;
   font-weight: 700;
   font-size: 15px;
@@ -125,11 +142,13 @@ html {
 
 .tab:hover {
   cursor: pointer;
+  color: rgb(29, 161, 242);
   background-color: rgba(29, 160, 242, 0.137);
   border-bottom: 2px solid rgb(29, 161, 242);
 }
 
 .active {
+  color: rgb(29, 161, 242);
   background-color: rgba(29, 160, 242, 0.137);
   border-bottom: 2px solid rgb(29, 161, 242);
 }
@@ -159,13 +178,8 @@ html {
   display: flex;
 }
 
-.tweet-display-name {
-    font-size: 16px;
-    font-weight: 700;
-}
-
 .tweet-detail {
-  padding: 0 0 0 5px;
+  padding-left: 5px;
 }
 
 .tweet-body {
