--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@ html {
   padding: 5px 0;
 }
 
-.user-content {
-  padding: 0 20px;
-}
-
 .arrow {
   padding: 0 20px;
 }
@@ -45,9 +41,18 @@ html {
   cursor: pointer;
 }
 
+.user-content {
+  padding: 0 20px;
+}
+
 .name {
   font-size: 20px;
   font-weight: 700;
+}
+
+.name > span {
+  padding-left: 5px;
+  color: rgb(29, 161, 242);
 }
 
 #tweet-count {
