Add switch users container

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ html {
   max-width: 600px;
   border: 1px solid #f1f1f1;
   border-top: none;
-  border-bottom: none;
 }
 
 /* ---- header content ---- */
@@ -52,6 +51,10 @@ html {
 
 .name > span {
   padding-left: 5px;
+  color: rgb(29, 161, 242);
+}
+
+.small-bold > span {
   color: rgb(29, 161, 242);
 }
 
@@ -93,6 +96,9 @@ button {
   border: none;
   font-weight: 700;
   font-size: 15px;
+}
+
+#follow-button {
   margin-top: 10px;
   margin-right: 15px;
 }
@@ -160,6 +166,10 @@ button {
 
 /* ---- tweet content ---- */
 
+#tweets-container {
+  padding-bottom: 35px;
+}
+
 .tweet-div {
   display: flex;
   padding: 25px 0;
@@ -174,16 +184,16 @@ button {
   border: 4px solid white;
 }
 
-.tweet-inner-container {
+.tweets-inner-container {
   padding-bottom: 5px;
   margin: auto 0;
 }
 
-.tweet-details {
+.tweets {
   display: flex;
 }
 
-.tweet-detail {
+.tweet {
   padding-left: 5px;
 }
 
@@ -193,4 +203,14 @@ button {
   color: #2f2f2f;
   font-weight: 400;
   letter-spacing: .01rem;
+}
+
+/* -- switch user content -- */
+
+.switch-users {
+  display: flex;
+}
+
+.switch > button {
+  margin: 10px;
 }
