--- a/style.css
+++ b/style.css
@@ -98,6 +98,10 @@ button {
   font-size: 15px;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 #follow-button {
   margin-top: 10px;
   margin-right: 15px;
